# django-ditto

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
demo/: requirements.txt
demo/demo/: settings.py  urls.py
devproject/: Pipfile  manage.py  requirements.txt
devproject/devproject/: settings.py  urls.py  wsgi.py
ditto/: __init__.py  models.py  pkgmeta.py  views.py
ditto/core/: __init__.py  admin.py  app_settings.py  apps.py  context_processors.py  managers.py  models.py  paginator.py  urls.py  utils.py  views.py
ditto/core/templatetags/: ditto.py  ditto_core.py
ditto/core/tests/: test_views.py
ditto/core/utils/: __init__.py  downloader.py
ditto/ditto/: __init__.py  apps.py  managers.py  models.py  paginator.py  urls.py  utils.py  views.py
ditto/ditto/static/: bootstrap.css
ditto/ditto/templatetags/: ditto.py
ditto/ditto/tests/: test_apps.py  test_templatetags.py  test_utils.py  test_views.py
ditto/flickr/: __init__.py  admin.py  app_settings.py  apps.py  checks.py  factories.py  fetch.py  imagegenerators.py  managers.py  models.py  settings.py  urls.py  views.py
ditto/flickr/fetch/: __init__.py  fetchers.py  filesfetchers.py  multifetchers.py  savers.py
ditto/flickr/migrations/: 0001_initial.py  0002_auto_20160406_1548.py  0003_auto_20160413_0906.py  0004_auto_20160414_1120.py  0005_auto_20160414_1427.py  0006_auto_20160414_1459.py  0007_auto_20160414_1637.py  0008_auto_20160429_1559.py  0009_photoset_fetch_time.py  0010_photo_photosets.py  0011_auto_20160502_1645.py  0012_auto_20160503_1457.py  0013_photoset_photos_raw.py  0014_photo_original_file.py  0014_photodownload.py  0015_auto_20160514_1456.py  0016_photo_video_original_file.py  0017_auto_20160524_1350.py  0018_auto_20160525_1011.py  0019_auto_20160713_1127.py  0020_auto_20161117_1622.py  0021_photo_post_year.py  0022_photo_taken_year.py  0023_auto_20180104_1457.py  0024_auto_20201119_1539.py  0026_alter_taggedphoto_content_object_and_more.py  0027_alter_user_photos_url_alter_user_profile_url.py  0028_alter_user_iconfarm.py  0029_alter_user_options_alter_user_realname.py
ditto/flickr/templatetags/: ditto_flickr.py  flickr.py
ditto/flickr/tests/: test_fetch.py  test_fetch_fetchers.py  test_fetch_savers.py  test_management_commands.py  test_models.py  test_templatetags.py  test_views.py
ditto/lastfm/: __init__.py  admin.py  apps.py  factories.py  fetch.py  managers.py  models.py  urls.py  utils.py  views.py
ditto/lastfm/migrations/: 0001_initial.py  0002_auto_20160914_1314.py  0002_auto_20161012_1012.py  0003_auto_20160914_1521.py  0003_auto_20161026_1539.py  0004_auto_20161026_1540.py  0005_auto_20161117_1622.py  0006_scrobble_post_year.py  0007_set_post_year.py  0008_auto_20180104_1457.py
ditto/lastfm/templatetags/: ditto_lastfm.py
ditto/pinboard/: __init__.py  admin.py  apps.py  checks.py  factories.py  fetch.py  managers.py  models.py  urls.py  views.py
ditto/pinboard/fixtures/: fetch_bookmarks_test.json
ditto/pinboard/migrations/: 0001_initial.py  0002_auto_20150626_1521.py  0003_auto_20150626_1558.py  0004_auto_20150626_1603.py  0005_auto_20150626_1702.py  0006_auto_20150723_1322.py  0007_auto_20150724_1957.py  0008_bookmark_tags.py  0009_auto_20150729_1056.py  0010_auto_20150730_1112.py  0011_auto_20151002_1525.py  0012_account_is_active.py  0013_auto_20151026_1546.py  0014_auto_20151028_1556.py  0015_auto_20151110_1308.py  0016_auto_20151119_1702.py  0017_auto_20160413_0906.py  0018_auto_20160414_1637.py  0019_auto_20160428_1525.py  0020_auto_20160428_1526.py  0021_auto_20160428_1533.py  0022_auto_20160428_1542.py  0023_auto_20161117_1622.py  0024_bookmark_post_year.py  0025_auto_20201223_1509.py  0026_alter_taggedbookmark_content_type_and_more.py  0027_alter_bookmarktag_slug.py
ditto/pinboard/templatetags/: ditto_pinboard.py  pinboard.py
ditto/pinboard/tests/: test_fetch.py  test_management_commands.py  test_models.py  test_templatetags.py  test_views.py
ditto/scripts/: flickr_authorize.py
ditto/templates/ditto/: base.html  home.html
ditto/tests/: test_views.py
ditto/twitter/: __init__.py  admin.py  app_settings.py  apps.py  factories.py  fetch.py  imagegenerators.py  ingest.py  managers.py  models.py  settings.py  urls.py  utils.py  views.py
ditto/twitter/fetch/: __init__.py  fetch.py  fetchers.py  mixins.py  savers.py
ditto/twitter/migrations/: 0001_initial.py  0002_auto_20150729_1704.py  0003_auto_20150730_1112.py  0004_auto_20150730_1116.py  0005_auto_20150730_1350.py  0006_auto_20150730_1450.py  0007_auto_20150807_1432.py  0008_remove_user_twitter_id_str.py  0009_account_last_fetch_id.py  0010_remove_tweet_text.py  0011_tweet_text.py  0012_auto_20150814_1730.py  0021_video.py  (+44 more)
docs/: Makefile  Pipfile  conf.py  development.rst  index.rst  installation.rst  introduction.rst
docs/services/: flickr.rst  lastfm.rst  pinboard.rst  twitter.rst
scripts/: coveralls.sh  flickr_authorize.py
src/ditto/: __init__.py
tests/: settings.py  test_admins.py  test_pending_migrations.py  test_settings.py  urls.py
tests/core/: __init__.py  test_apps.py  test_paginator.py  test_templatetags.py  test_utils.py  test_views.py
tests/flickr/: test_fetch.py  test_fetch_fetchers.py  test_fetch_filesfetchers.py  test_fetch_multifetchers.py  test_fetch_savers.py  test_management_commands.py  test_models.py  test_templatetags.py  test_views.py
tests/lastfm/: test_fetch.py  test_fetch_fetchers.py  test_management_commands.py  test_managers.py  test_models.py  test_templatetags.py  test_utils.py  test_views.py
tests/pinboard/: test_fetch.py  test_management_commands.py  test_models.py  test_templatetags.py  test_views.py
tests/twitter/: test_fetch.py  test_fetch_fetchers.py  test_fetch_mixins.py  test_fetch_savers.py  test_ingest.py  test_ingest_v1.py  test_ingest_v2.py  test_management_commands.py  test_models.py  test_templatetags.py  test_utils.py  test_views.py
(+431 files in other folders)
