# project ######################################################################
[project]
authors = [{ "name" = "Phil Gyford", "email" = "phil@gyford.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "django-imagekit>=4.0,<6.0",
  "django-sortedm2m>=4.0,<5.0",
  "django-taggit>=5.0.0,<7.0",
  "flickrapi>=2.4,<2.5",
  "pillow>=9.0.0,<11.0",
  "twitter-text-python>=1.1.1,<1.2",
  "twython>=3.7.0,<3.10",
]
description = "A Django app to copy stuff from your accounts on Flickr, Last.fm, Pinboard and Twitter."
dynamic = ["version"]
keywords = ["ditto", "twitter", "flickr", "pinboard", "last.fm"]
license = { file = "LICENSE" }
name = "django-ditto"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
"Changelog" = "https://github.com/philgyford/django-ditto/blob/main/CHANGELOG.md"
"Documentation" = "https://django-ditto.readthedocs.io/"
"Issues" = "https://github.com/philgyford/django-ditto/issues"
"Source Code" = "https://github.com/philgyford/django-ditto"

# dependency-groups ############################################################

[dependency-groups]
dev = [
  "coverage[toml]",
  "factory-boy",
  "freezegun",
  "pre-commit",
  "responses",
  "ruff",
  "unittest-parametrize",
]

# coverage #####################################################################

[tool.coverage.paths]
# Reduce length of paths in the report
# via https://hynek.me/articles/testing-packaging/
source = ["src", ".tox/py*/**/site-packages"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
parallel = true
omit = ["*/migrations/*.py"]
source = ["ditto"]

# ruff #########################################################################

[tool.ruff]
extend-exclude = ["*/migrations/*"]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = []
select = [
  # Reference: https://docs.astral.sh/ruff/rules/
  "B",      # flake8-bugbear
  "E",      # pycodestyle
  "F",      # Pyflakes
  "G",      # flake8-logging-format
  "I",      # isort
  "N",      # pip8-naming
  "Q",      # flake8-quotes
  "BLE",    # flake8-blind-except
  "DJ",     # flake8-django
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "INP",    # flake8-no-pep420
  "FBT",    # flake8-boolean-trap
  "PIE",    # flake8-pie
  "RSE",    # flake-raise
  "SIM",    # flake8-simplify
  "T20",    # flake8-print
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "RUF100", # unused-noqa
  "RUF200", # invalid-pyproject-toml
]

# setuptools ###################################################################

[tool.setuptools.dynamic]
version = { attr = "src.ditto.__version__" }

# tox ##########################################################################

[tool.tox]
requires = ["tox>=4.0"]
# Can't use a generative environment list
# (https://tox.wiki/en/4.23.2/config.html#generative-environment-list)
# in pyproject.toml, so:
env_list = [
  "ruff",
  # Django 4.2
  "py39-django42",
  "py310-django42",
  "py311-django42",
  "py312-django42",
  # Django 5.1
  "py310-django51",
  "py311-django51",
  "py312-django51",
  "py313-django51",
  # Current main Django
  "py310-djangomain",
  "py311-djangomain",
  "py312-djangomain",
  "py313-djangomain",
]

[tool.tox.env_run_base]
setenv = { "DJANGO_SETTINGS_MODULE" = "tests.settings", "PYTHONPATH" = "{toxinidir}" }
dependency_groups = ["dev"]
commands = [
  [
    "coverage",
    "run",
    "{envbindir}/django-admin",
    "test",
    # Allow us to optionally pass in args like "-- tests.core.test_views":
    { replace = "posargs", default = [], extend = true },
  ],
  ["coverage", "combine"],
  ["coverage", "report"],
]

[tool.tox.env.py39-django42]
deps = ["Django >= 4.2, < 4.3"]
[tool.tox.env.py310-django42]
deps = ["Django >= 4.2, < 4.3"]
[tool.tox.env.py311-django42]
deps = ["Django >= 4.2, < 4.3"]
[tool.tox.env.py312-django42]
deps = ["Django >= 4.2, < 4.3"]

[tool.tox.env.py310-django51]
deps = ["Django >= 5.1, < 5.2"]
[tool.tox.env.py311-django51]
deps = ["Django >= 5.1, < 5.2"]
[tool.tox.env.py312-django51]
deps = ["Django >= 5.1, < 5.2"]
[tool.tox.env.py313-django51]
deps = ["Django >= 5.1, < 5.2"]

[tool.tox.env.py310-djangomain]
deps = ["https://github.com/django/django/archive/master.tar.gz"]
[tool.tox.env.py311-djangomain]
deps = ["https://github.com/django/django/archive/master.tar.gz"]
[tool.tox.env.py312-djangomain]
deps = ["https://github.com/django/django/archive/master.tar.gz"]
[tool.tox.env.py313-djangomain]
deps = ["https://github.com/django/django/archive/master.tar.gz"]

[tool.tox.env.ruff]
skip_install = true
deps = ["ruff"]
commands = [["ruff", "check", "--output-format=full", "."]]

[tool.tox.gh-actions]
# Maps GitHub Actions python version numbers to tox env vars
python = """
	3.9: py39
	3.10: py310
	3.11: py311
	3.12: py312
	3.13: py313
	"""

[tool.tox.gh-actions.env]
# Maps GitHub Actions DJANGO version env var to tox env vars
DJANGO = """
  4.2: django42
  5.1: django51
  main: djangomain
  """

# uv ###########################################################################

[tool.uv]
# Ensure Tox always gets a fresh package.
reinstall-package = ["ditto"]
